@@ -24,6 +24,8 @@ prop.progname=PROGNAME
 prop.servername=SERVERNAME
 prop.servertype=SERVERTYPE
 prop.sotimeout=SOCKETTIMEOUT
+prop.sokeepalive=SOCKETKEEPALIVE
+prop.processid=PROCESSID
 prop.ssl=SSL
 prop.tcpnodelay=TCPNODELAY
 prop.tds=TDS
@@ -63,6 +65,8 @@ prop.desc.progname=The program name advertised by the driver.
 prop.desc.servername=The database server hostname.
 prop.desc.servertype=The type of database (1 is SQL Server, 2 is Sybase).
 prop.desc.sotimeout=The TCP/IP socket timeout value in seconds or 0 for no timeout.
+prop.desc.sokeepalive=Use TCP/IP socket keep alive feature.
+prop.desc.processid=The process ID reported by the driver.
 prop.desc.ssl=Set the SSL level.
 prop.desc.tcpnodelay=Enable/disable TCP_NODELAY
 prop.desc.tds=The database server protocol.
